Fixed the spacing issues on the header text

--- a/css/index_styling.css
+++ b/css/index_styling.css
@@ -99,3 +99,6 @@ a:hover {
   text-decoration: none;
   font-weight: normal;
 }
+.header {
+  margin: 20px;
+}
